--- a/index.html
+++ b/index.html
@@ -21,32 +21,62 @@
 					
 			</h1>
 		</div>
-		<div class="card-container">
-			<div class="card">
-				<img class="cardimage" src="ace.PNG" alt="about">
+		<section id="home">
+			<div class="card-container">
+			
+				<div class="card">
+					<div class="halfcard">
+						<a href="#about"><img class="cardimage" id="aboutcard" src="images/ace.PNG" alt="#about"></a>
+					</div>
+					<div class="halfcard cardtext" id="abouttext">
+						<h2>ABOUT</h2>
+					</div>
+				</div>
+
+  				<div class="card" id="portcard"> 
+					<div class="halfcard">
+						<a href="#port"><img class="cardimage" id="portcard" src="images/port.PNG" alt="#about"></a>
+					</div>
+					<div class="halfcard cardtext" id="porttext">
+						<h2>PORT</h2>
+					</div>
+  				</div>
+
+  				<div class="card" id="servicecard">
+
+					<div class="halfcard">
+						<a href="#service"><img class="cardimage" id="servicecard" src="images/service.PNG" alt="#about"></a>
+					</div>
+					<div class="halfcard cardtext" id="servicetext">
+						<h2>SERVICE</h2>
+					</div>
+
+  				</div>
+
+  				<div class="card" id="contactcard">
+					<div class="halfcard">
+						<a href="#contact"><img class="cardimage" id="contactcard" src="images/contact.PNG" alt="#about"></a>
+					</div>
+					<div class="halfcard cardtext" id="contacttext">
+						<h2>CONTACT</h2>
+					</div>
+	
+  				</div>
 			</div>
+			<div>
+				<h2 id="pick">Pick a card.</h2>
+			</div>
+		</section>
+		<section id="about">
+			<div class="large-container about">
+				<h1>Hi! My name is rain lol</h1>	
+			</div>
+		</section>
+		<section id="port">
+			<div class="port">
 
-  			<div class="card">
-				<img class="cardimage" src="ace.PNG" alt="about">
-
-  			</div>
-
-  			<div class="card">
-				<img class="cardimage" src="ace.PNG" alt="about">
-
-  			</div>
-
-  			<div class="card">
-				<img class="cardimage" src="ace.PNG" alt="about">
-
-  			</div>
-		</div>
-		<div id="pick">
-			<h2>Pick a card.</h2>
-		</div>
-		<div class="about-container">
-			<h1>Hi! My name is rain lol</h1>	
-		</div>
+			</div>
+		</section>
 
 
 		<script src="index.js"></script>
