--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			
 				<div class="card">
 					<div class="halfcard">
-						<a href="#about"><img class="cardimage" id="aboutcard" src="areain10.github.io/realport/images/ace.PNG" alt="#about"></a>
+						<a href="#about"><img class="cardimage" id="aboutcard" src="images/ace.PNG" alt="#about"></a>
 					</div>
 					<div class="halfcard cardtext" id="abouttext">
 						<h2>ABOUT</h2>
