--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<title>Areain</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300&display=swap" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@800&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
@@ -17,7 +18,7 @@
 				<source src="haruhi.mp4" type="video/mp4">
 			</video>
 			<h1 class="name-header">
-				<span class="name">Rain</span><span class="name">Athkravisoonthorn</span>
+				<span class="name">Ra</span><span class="name">in</span>
 					
 			</h1>
 		</div>
